# git_collection

./: .gdbinit  .gitmodules  .zshrc  README.md
advent/01/: a.out  main.c
advent/02/: a.out  main.c  main2.c
advent/03/: a.out  header.h  main.c  test.c
advent/04/: a.out  header.h  main.c  test.txt
template/: Makefile  TEMPLATE  header.h  main.c  output_test_log
template/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  my_app
template/cmake/inc/: inc.h
template/cmake/src/: main.c
template/cmake/src/func/: test.c
template/log/: CMakeCache.txt  CMakeLists.txt  Log.txt  Logger  Logger.cpp  Logger.hpp  Makefile  cmake_install.cmake  colors.h  main.cpp
template/src/: a.c
template/templates/: cpp.template  hpp.template
template/test/: func_call_test.c  log_test.c  mem_leak_test.c  test.c  test_header.h  test_test.c  this_a_test.c  write_test.c
template/test/log/: test_log_0.txt  test_log_1.txt  test_log_2.txt  test_log_3.txt  test_log_4.txt  test_log_5.txt  test_log_6.txt  test_log_7.txt  test_log_8.txt  test_log_9.txt
